--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			sizes="32x32"
 			href="./images/favicon-32x32.png"
 		/>
-		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="stylesheet" type="text/css" href="assets/style.css" />
 		<title>Frontend Mentor | Order summary card</title>
 		<style>
 			.attribution {
