--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<title>Frontend Mentor | Order summary card</title>
 	</head>
 	<body>
-		<div class="parent-container">
+		<main class="parent-container">
 			<div class="content-holder">
 				<div class="icon-holder">
 					<img src="images/illustration-hero.svg" alt="" />
@@ -42,7 +42,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</main>
 		<footer>
 			<div class="attribution">
 			Challenge by
