--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			href="./images/favicon-32x32.png"
 		/>
 		<link rel="stylesheet" type="text/css" href="assets/style.css" />
-		<title>Frontend Mentor | Order summary card</title>
+		<title>Order summary card</title>
 	</head>
 	<body>
 		<main class="parent-container">
