--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 			</div>
 		</main>
 		<footer>
-<!-- 			<div class="attribution">
+			<div class="attribution">
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
 				>Frontend Mentor</a
-			>. Coded by <a href="https://github.com/babboe1">Babboe1</a>. -->
+			>. Coded by <a href="https://github.com/babboe1">Babboe1</a>.
 		</div>
 		</footer>
 	</body>
