--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
 				>Frontend Mentor</a
-			>. Coded by <a href="https://github.com/babboe1">Babboe1</a>.
+			>. Coded by <a href="https://github.com/babboe1">babboeCodes</a>.
 		</div>
 		</footer>
 	</body>
